nginx-app01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: nginx-app01
spec:
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
